# python-agents-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
complex-agents/medical_office_triage/: .env.example  README.md  triage.py  utils.py
complex-agents/medical_office_triage/prompts/: billing_prompt.yaml  support_prompt.yaml  triage_prompt.yaml
complex-agents/personal_shopper/: README.md  add_test_orders.py  customer_data_ja.db  database.py  personal_shopper.py  utils.py
complex-agents/personal_shopper/prompts/: returns_prompt.yaml  sales_prompt.yaml  triage_prompt.yaml
